--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,10 +12,12 @@
 
   <div class="row">
     <div class="col">
+      <label class="sr-only" for="search">Search</label>
       <input
         type="text"
         class="form-control mt-3"
         id="search"
+        name="search"
         placeholder="Search..."
         [formControl]="filter"
       />
