feat: Add Typeform and actual database

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,12 @@
       <h1 class="display-4">homeschool.events</h1>
       <p class="lead">A database of homeschool events</p>
 
-      <a [routerLink]="['/submit']" class="btn btn-primary btn-raised">
+      <a
+        class="btn btn-primary btn-raised typeform-share"
+        href="https://eventone.typeform.com/to/HwJvuN"
+        data-mode="popup"
+        target="_blank"
+      >
         Submit an event
       </a>
     </div>
