--- a/src/app/submit/submit.component.html
+++ b/src/app/submit/submit.component.html
@@ -26,7 +26,7 @@
       <div class="form-group">
         <label for="type">Type</label>
         <select class="form-control" id="type" formControlName="type">
-          <option value="Convention" [selected]="true">Convention</option>
+          <option value="Convention">Convention</option>
         </select>
       </div>
 
@@ -38,7 +38,7 @@
       <div class="form-group">
         <label for="startDate">Start Date</label>
         <input
-          type="datetime-local"
+          type="date"
           class="form-control"
           name="startDate"
           formControlName="startDate"
