--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -35,7 +35,7 @@
     class="col-md-4 col-sm-6 col-xs-12 mb-4"
     *ngFor="let event of events$ | async; index as i"
   >
-    <div class="card h-100 text-center event-card">
+    <div class="card h-100 text-center event-card" (click)="clickEvent()">
       <a
         [href]="event.url"
         class="card-body p-4 event-link h-100 d-flex flex-column justify-content-between align-items-center"
